# Strategy-game

./: .gitignore  CMakeLists.txt  README.md  game  main.cpp  makefile
App/: CMakeLists.txt  Game.cpp  Player.cpp  Snapshot.cpp
App/Headers/: Command.h  Game.h  Player.h  Snapshot.h
ArmyCoordinator/: ArmyCoordinator.cpp  CMakeLists.txt
ArmyCoordinator/Headers/: ArmyCoordinator.h
Creators/: ArchmageCreator.cpp  ArchmageCreator.h  CMakeLists.txt  ElfCreator.cpp  ElfCreator.h  HealerCreator.cpp  HealerCreator.h  MageCreator.cpp  MageCreator.h  README.md  UnitCreator.cpp  UnitCreator.h  UnitCreator.hpp  WarriorElfCreator.cpp  WarriorElfCreator.h
Creators/Headers/: ArchmageCreator.h  CharactersConfig.h  ElfCreator.h  HealerCreator.h  MageCreator.h  UnitCreator.h  WarriorElfCreator.h
FractionBuilders/: CMakeLists.txt  HighElvesBuilder.cpp  HighElvesBuilder.h  IBuilder.cpp  IBuilder.h  README.md  director.cpp
FractionBuilders/Headers/: HighElvesBuilder.h  IBuilder.h  director.h
Logs/: CMakeLists.txt  Log.cpp  NewIDGen.cpp
Logs/Headers/: Log.h  NewIDGen.h
Units/: Archmage.cpp  CMakeLists.txt  Elf.cpp  Elf.h  Elf.hpp  Healer.cpp  Healer.h  Healer.hpp  Mage.cpp  Mage.h  Mage.hpp  README.md  UnitInterface.h  WarriorElf.cpp  WarriorElf.h
Units/Headers/: Archmage.h  Elf.h  Healer.h  Mage.h  UnitInterface.h
game.dSYM/Contents/Resources/DWARF/: game
